<resources>
    <string name="app_name">bhh-app</string>
    <string name="txt_com_id">회사 아이디</string>
    <string name="txt_com_id_info">회사 아이디를 입력해주세요</string>
    <string name="txt_pw">회사 비밀번호</string>
    <string name="txt_pw_info">회사 비밀번호를 입력해주세요</string>
    <string name="txt_user_id">사용자 아이디</string>
    <string name="txt_user_id_info">사용자 아이디를 입력해주세요</string>
    <string name="txt_pressed_back" translatable="false">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>


    <string-array name="spinner_items">
        <item>수량 직접 입력</item>
        <item>1씩 증가 후 저장</item>
    </string-array>
</resources>